[package]
authors = ["Matt Gathu <mattgathu@gmail.com>"]
edition = "2018"
name = "httpbin-actix"
version = "0.1.0"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
actix-session = "0.3.0"
env_logger = "0.7"
serde_json = "1"
serde_derive = "1"
serde = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
maplit = "1.0.2"
base64 = "0.11.0"
futures = "0.3.4"
rand = "0.7.3"
tokio = "0.2.11"
bytes = "0.5.4"
log = "0.4.8"
